--- a/calci.html
+++ b/calci.html
@@ -9,32 +9,28 @@
 <body>
     <div class="calculator">
         <div id="display" class="display">0</div>
-        <div>
-            <button class="button" onclick="appendNumber('7')">7</button>
-            <button class="button" onclick="appendNumber('8')">8</button>
-            <button class="button" onclick="appendNumber('9')">9</button>
-            <button class="button operation" onclick="chooseOperation('/')">/</button>
-        </div>
-        <div>
-            <button class="button" onclick="appendNumber('4')">4</button>
-            <button class="button" onclick="appendNumber('5')">5</button>
-            <button class="button" onclick="appendNumber('6')">6</button>
-            <button class="button operation" onclick="chooseOperation('*')">*</button>
-        </div>
-        <div>
-            <button class="button" onclick="appendNumber('1')">1</button>
-            <button class="button" onclick="appendNumber('2')">2</button>
-            <button class="button" onclick="appendNumber('3')">3</button>
-            <button class="button operation" onclick="chooseOperation('-')">-</button>
-        </div>
-        <div>
-            <button class="button zero" onclick="appendNumber('0')">0</button>
-            <button class="button" onclick="appendNumber('.')">.</button>
-            <button class="button operation" onclick="chooseOperation('+')">+</button>
-        </div>
-        <div>
-            <button class="button" onclick="clearDisplay()">C</button>
-            <button class="button equal" onclick="calculate()">=</button>
+        <div class="buttons-container">
+            <div class="number-buttons">
+                <button class="button" onclick="appendNumber('7')">7</button>
+                <button class="button" onclick="appendNumber('8')">8</button>
+                <button class="button" onclick="appendNumber('9')">9</button>
+                <button class="button" onclick="appendNumber('4')">4</button>
+                <button class="button" onclick="appendNumber('5')">5</button>
+                <button class="button" onclick="appendNumber('6')">6</button>
+                <button class="button" onclick="appendNumber('1')">1</button>
+                <button class="button" onclick="appendNumber('2')">2</button>
+                <button class="button" onclick="appendNumber('3')">3</button>
+                <button class="button zero" onclick="appendNumber('0')">0</button>
+                <button class="button" onclick="appendNumber('.')">.</button>
+                <button class="button equal" onclick="calculate()">=</button>
+            </div>
+            <div class="operation-buttons">
+                <button class="button operation" onclick="chooseOperation('+')">+</button>
+                <button class="button operation" onclick="chooseOperation('-')">-</button>
+                <button class="button operation" onclick="chooseOperation('*')">*</button>
+                <button class="button operation" onclick="chooseOperation('/')">/</button>
+                <button class="button" onclick="clearDisplay()">C</button>
+            </div>
         </div>
     </div>
     <script>
